# SQL-Queries-RAG-LangChain

./: README.md  pyproject.toml
notebooks/: 005-qa-from-sql.ipynb
src/: __init__.py  main.py
src/features/: query_chain.py
src/model/: database.py
src/utils/: config.py  logger.py
