[tool.poetry]
name = "sql-querys-langchain"
version = "0.1.0"
description = ""
authors = ["Adrian Infantes <infantesromeroadrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.14"
pandas = "^2.2.3"
langchain-community = "^0.3.7"
langchain = "^0.3.7"
langchain-openai = "^0.2.8"
python-dotenv = "^1.0.1"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
